Minor Update -> Project details

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-one-page-template",
+  "name": "pmb-placeholder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
